--- a/css/desktop.css
+++ b/css/desktop.css
@@ -15,6 +15,7 @@
   font-size: 25vw;
 }
 .home p {
+  font-size: 2vw;
   margin-top: 12em;
 }
 .home .b-h1 {
@@ -31,14 +32,11 @@ header .nav h1 {
   height: 85px;
 }
 header .nav h1:hover {
-  border-bottom: 10px solid #FF2AC3;
+  border-bottom: 10px solid var(--primary-color);
 }
 
-.container-header {
-  gap: 80vw;
-}
-.container-header .logo {
-  margin-left: 1.5em;
+.container-header .menu {
+  margin-right: 3em;
 }
 .container-header .menu.close span:nth-child(2) {
   transform: rotate(-35deg) translate(-12px, 11px);
@@ -54,17 +52,25 @@ header .nav h1:hover {
   height: 3vh;
 }
 
+.title-section {
+  margin-bottom: 2em;
+  width: calc(0.5em + 40vw);
+}
+
 .about {
+  grid-template-columns: 150px repeat(2, 1fr) 200px;
   grid-template-rows: 150px repeat(6, 1fr);
+  justify-items: start;
 }
 .about .p-about {
-  grid-column: 1/2;
+  grid-column: 2/3;
   grid-row: 3/5;
-  justify-self: end;
+  width: 90%;
 }
 .about .card-profile {
-  grid-column: 2/3;
-  grid-row: 2/5;
+  grid-column: 3/4;
+  grid-row: 3/5;
+  justify-self: center;
 }
 .about .card-profile .p-animation {
   display: inline;
@@ -107,23 +113,24 @@ header .nav h1:hover {
 }
 
 .skills {
+  grid-template-columns: 150px repeat(2, 1fr) 150px;
   grid-template-rows: 150px repeat(6, 1fr);
+  justify-items: start;
 }
 .skills img {
-  grid-column: 2/3;
+  grid-column: 3/4;
   grid-row: 2/6;
+  width: 84%;
   align-self: center;
   margin: 0;
 }
 .skills .p-skills {
-  grid-column: 1/2;
-  width: 70%;
-  margin-left: 3.6em;
-  align-self: center;
+  grid-column: 2/3;
+  width: 80%;
 }
 .skills .interests {
   display: block;
-  grid-column: 1/2;
+  grid-column: 2/3;
   grid-row: 5/6;
   margin-top: 1em;
   display: flex;
@@ -142,9 +149,11 @@ header .nav h1:hover {
 }
 
 .projects {
+  grid-template-columns: 150px repeat(2, 1fr) 150px;
   grid-template-rows: 150px repeat(6, 1fr);
 }
 .projects .swiper-projects {
+  grid-column: 2/4;
   grid-row: 3/5;
   margin-top: 6em;
   max-width: 350px;
@@ -171,25 +180,25 @@ header .nav h1:hover {
 }
 
 .contact {
+  grid-template-columns: 150px repeat(2, 1fr) 150px;
   grid-template-rows: 150px repeat(6, 1fr);
 }
 .contact .p-contact {
-  grid-column: 1/2;
   grid-row: 3/4;
-  width: 60%;
+  width: 70%;
 }
 .contact img {
   display: block;
   position: absolute;
   top: 16%;
-  right: 3.5%;
-  width: 43vw;
+  right: 10%;
+  width: 45vw;
   height: 85vh;
   z-index: -1;
 }
 .contact form {
-  width: 65%;
-  grid-column: 2/3;
+  width: 70%;
+  grid-column: 3/4;
   grid-row: 3/7;
   gap: 0.8em;
   z-index: 4;
@@ -210,9 +219,9 @@ header .nav h1:hover {
   height: 8vh;
 }
 .contact .credits {
-  grid-column: 1/2;
+  grid-column: 2/3;
   grid-row: 6/span 7;
-  width: 60%;
+  width: 70%;
 }
 .contact .credits span {
   width: 23vw;
