--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -3,24 +3,20 @@
 .about {
     
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: 45px 1fr 45px;
     grid-template-rows: 90px repeat(6,1fr);
     justify-items: center;
     background-color: var(--secondary-light-color);
 
 
     .p-about{
-        grid-row: 4 / 6;
-        grid-column: 1 / 3;
-        width: 80%;
+        grid-row: 5 / 6;
+        grid-column: 2 / 3;
         font-size: conf.fontSize(font-body);
-        justify-self: center;
-        margin-top: 3vw;
-        height: 200px;
     }
 
     .card-profile{
-        grid-column: 1 / 3;
+        grid-column: 2 / 3;
         grid-row: 3 / 4;      
         align-self: center;
 
