--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -3,7 +3,8 @@
 header {
     position: fixed;
     z-index: 2;
-    
+    width: 100%;
+
     .nav{
         visibility: hidden;
         position: absolute;
@@ -17,14 +18,19 @@ header {
         justify-content: center;
         font-size: 5vw;
         padding-left: 2em;
+        gap: calc(1em + 2vw);
         cursor: pointer;
 
         h1{
-            width: 55%;
-            height: 65px;
+            width: 67%;
+            
             &:hover{
                 border-bottom: 5px solid var(--primary-color);
                 
+            }
+
+            &:active{
+                color: var(--primary-dark-color);
             }
         }
     }
@@ -38,7 +44,7 @@ header {
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 55vw; 
+    justify-content: space-between;
 
     .logo{
         width: calc(3em + 6vw);
@@ -52,12 +58,13 @@ header {
         flex-direction: column;
         gap: calc(0.3em + 0.8vw);
         cursor: pointer;
+        margin-right: 1em;
         z-index: 4;
 
         span{
             transition: all .2s linear;
             transform-origin: 4px 0px;
-            border-radius: 0.5rem;
+            border-radius: 0.5em;
             width: calc(2em + 3vw);
             height: calc(0.2em + 0.1vw);
             background-color: var(--primary-color);
