--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -19,6 +19,7 @@ body {
     overflow-y: hidden;
     overflow-x: hidden;
     font-family: conf.fontFamily(khmer-light);
+    
 }
 
 
@@ -39,24 +40,25 @@ main {
 }
 
 .title-section{
-    grid-column: 1 / 2;
+    grid-column: 2;
     grid-row: 2 / 3;
     align-self: center;
+    justify-self: start;
     margin-bottom: 1em;
 
-    width: 60%;
+    width: calc(0.5em + 70vw);
     display: flex;
     flex-direction: column;
 
     h1{
-        font-size: calc(1.5em + 4vw);
-
+        font-size: calc(1.5em + 3vw);
+        letter-spacing: 0.035em;
     }
 
    .line{
         
         transform: translateX(-20em);
-        background-color: conf.$primary-color;
+        background-color: var(--primary-color);
         height: calc(0.2em + 0.2vw);
         width: calc(2em + 8vw);
         
