--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -3,15 +3,15 @@
 .projects {
   
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: 45px 1fr 45px;
     grid-template-rows: 90px repeat(9,1fr);
     justify-items: center;
     background-color: var(--secondary-light-color);
 
     .swiper-projects {
-        grid-column: 1 / 3;
+        grid-column: 2 / 3;
         grid-row: 4 / 6;
-        max-width: 200px;
+        max-width: calc(2em + 50vw);
         overflow: visible;
 
         .swiper-slide {
