--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -2,23 +2,20 @@
 
 .skills {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: 45px 1fr 45px;
     grid-template-rows: 90px repeat(6,1fr);
-    justify-items: center;
     background-color: var(--secondary-color);
+    justify-items: center;
 
     img{
-        grid-column: 1 / 3;
-        grid-row: 4 / 5;
-        width: 80%;
-        justify-self: center;
-        margin-top: 3em;
+        grid-column: 2;
+        grid-row: 4 / span 5;
+        width: calc(0.5em + 70vw);
     }
 
     .p-skills{
-        grid-column: 1 / 3;
+        grid-column: 2;
         grid-row: 3 / 5;
-        width: 76%;
         font-size: conf.fontSize(font-body);
     }
 
